processed/gerrit/txt_full/38734.txt
Change:     38734
Subject:    LU-13606 lnet: Implement MR forwarding
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/38734
Change-Id:  I828016c9abe45783fdf9845ddc145e73ee1c4144
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Chris Horn
Created:    2020-05-27 20:12:48.000000000
Updated:    2020-06-02 19:03:00.000000000
Patch Set:  3
Insertions: +42
Deletions:  -2
Comments:   2 (0 unresolved)

--- Commit Message ---
LU-13606 lnet: Implement MR forwarding

Allow router to queue message while originator is discovered. After
discovery, if both the message originator and the destination are
multi-rail, then allow the router to choose a new destination
interface.

Test-Parameters: trivial
Signed-off-by: Chris Horn <chris.horn@hpe.com>
Change-Id: I828016c9abe45783fdf9845ddc145e73ee1c4144

--- Review History ---

--- Message (Chris Horn, 2020-05-27 20:12:48.000000000) ---
Uploaded patch set 1.

--- Message (Chris Horn, 2020-05-27 20:15:10.000000000) ---
Uploaded patch set 2: Commit message was updated.

--- Message (jenkins, 2020-05-27 20:15:10.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/14590/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/74559/ : ABORTED

--- Message (wc-checkpatch, 2020-05-27 20:15:40.000000000) ---
Patch Set 2:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2020-05-27 20:15:54.000000000) ---
Patch Set 1:

centos7: Compile failed

rhel8.1: Compile failed


 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/9270/results.html

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-05-27 20:15:57.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lnet/lnet/lib-move.c: In function ‘lnet_select_pathway’:
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:2719:10: error: too many arguments to function ‘lnet_initiate_peer_discovery’
           rtr_nid, cpt);
           ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c:1920:1: note: declared here
  lnet_initiate_peer_discovery(struct lnet_peer_ni *lpni, struct lnet_msg *msg,
  ^
 /home/green/git/lustre-release/lnet/lnet/lib-move.c: At top level:
 cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
 cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Chris Horn, 2020-05-27 20:17:37.000000000) ---
Uploaded patch set 3.

--- Message (jenkins, 2020-05-27 20:17:38.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/14591/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/74560/ : ABORTED

--- Message (Lustre Gerrit Janitor, 2020-05-27 20:17:48.000000000) ---
Patch Set 2:

centos7: Compile failed

rhel8.1: Compile failed


 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/9271/results.html

--- Message (wc-checkpatch, 2020-05-27 20:20:51.000000000) ---
Patch Set 3:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2020-05-27 20:21:25.000000000) ---
Patch Set 3:

Builds for x86_64 centos7,rhel8.1 successful
Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/9272/results.html

 Commencing initial testing: runtests-ssk@ldiskfs+SharedKey runtests@zfs runtests@zfs+DNE

--- Message (Lustre Gerrit Janitor, 2020-05-27 20:31:41.000000000) ---
Patch Set 3:

Initial testing succeeded.

Succeeded:
- runtests-ssk@ldiskfs+SharedKey runtests@zfs runtests@zfs+DNE 

(centos7)All results and logs: https://testing-archive.whamcloud.com/gerrit-janitor/9272/results.html
Commencing standard testing: 
- lnet-selftest@zfs sanity-lnet@zfs

--- Message (Lustre Gerrit Janitor, 2020-05-27 20:46:13.000000000) ---
Patch Set 3:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed Successfully

Succeeded:
- lnet-selftest@zfs sanity-lnet@zfs 

(centos7)All results and logs: https://testing-archive.whamcloud.com/gerrit-janitor/9272/results.html

--- Message (jenkins, 2020-05-27 20:50:59.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/14592/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/74561/ : SUCCESS

--- Message (Autotest, 2020-05-27 20:52:51.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-ldiskfs-dne session for build 74561.

--- Message (Maloo, 2020-05-28 01:00:14.000000000) ---
Patch Set 3: Verified-1

Failed enforced test review-ldiskfs-dne on CentOS 7.0/x86_64 uploaded by Trevis Autotest from trevis-24vm5: https://testing.whamcloud.com/test_sessions/7e18f74c-b85c-48d3-a650-908dab24ee2d ran 5 tests.  1 tests failed: sanity.

--- Message (Autotest, 2020-05-28 14:58:42.000000000) ---
Patch Set 3:

Trevis Autotest2 retesting enforced review-ldiskfs-dne session for build 74561. Requested by Chris Horn because of LU-13187.

--- Message (Maloo, 2020-05-28 19:36:27.000000000) ---
Patch Set 3: Verified+1

Passed enforced test review-ldiskfs-dne on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-47vm1: https://testing.whamcloud.com/test_sessions/f05d512e-1921-417b-9f8b-c8383885d92e ran 5 tests.

--- Message (Chris Horn, 2020-06-02 19:03:00.000000000) ---
Abandoned

Approach abandoned in favor of https://review.whamcloud.com/#/c/38798/4
